@@ -11,7 +11,7 @@
  * called by a name other than "ssh" or "Secure Shell".
  */
 
-/* RCSID("$OpenBSD: compress.h,v 1.7 2000/12/20 19:37:22 markus Exp $"); */
+/* RCSID("$OpenBSD: compress.h,v 1.8 2001/04/05 10:39:02 markus Exp $"); */
 
 #ifndef COMPRESS_H
 #define COMPRESS_H
@@ -20,7 +20,8 @@
  * Initializes compression; level is compression level from 1 to 9 (as in
  * gzip).
  */
-void    buffer_compress_init(int level);
+void	buffer_compress_init_send(int level);
+void	buffer_compress_init_recv(void);
 
 /* Frees any data structures allocated by buffer_compress_init. */
 void    buffer_compress_uninit(void);
