@@ -4,6 +4,9 @@
    - markus@cvs.openbsd.org 2001/04/05 10:00:06
      [compat.c]
      2.3.x does old  GEX, too; report jakob@
+   - markus@cvs.openbsd.org 2001/04/05 10:39:03
+     [compress.c compress.h packet.c]
+     reset compress state per direction when rekeying.
 
 20010405
  - OpenBSD CVS Sync                                              
@@ -4876,4 +4879,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1064 2001/04/05 23:19:21 mouring Exp $
+$Id: ChangeLog,v 1.1065 2001/04/05 23:20:46 mouring Exp $
